[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shaders/CrtShader.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Tutorial/TutorialStocksToTake.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/GridSystem/GridSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Tutorial/Instructions.gd" type="Script" id=4]
[ext_resource path="res://Game/SelectDraw.gd" type="Script" id=5]
[ext_resource path="res://Game/Tutorial/TutorialManager.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/press_start/prstartk.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 9 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 6 )
pathToMainMenu = "res://UI/MainMenu/MainMenu.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="Background" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1440, 810 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.227451, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Instructions" type="Control" parent="CanvasLayer2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 96.0
margin_right = -32.0
margin_bottom = 512.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
instructions = [ "HOLD LEFT CLICK TO DRAG THE BLOCKS TO THE GRID.", "FIT THE BLOCKS INTO A RECTANGLE.

HOLD LEFT CLICK & SPACE TO ROTATE THE BLOCKS.

HOLD RIGHT CLICK & DRAG TO CLEAR THE BLOCKS.", "NOICE! LET'S TRY OTHER BLOCKS NOW.

HOLD LEFT CLICK TO DRAG THE BLOCKS TO THE GRID.", "FIT THE BLOCKS INTO A RECTANGLE. 

HOLD LEFT CLICK & SPACE TO ROTATE THE BLOCKS.

HOLD RIGHT CLICK & DRAG TO CLEAR THE BLOCKS.", "LET'S GOOOO!

REMEMBER, BLOCKS CAN ONLY BE CLEARED WHEN FITTED INTO A RECTANGLE.

HAVE FUN!" ]

[node name="Label" type="Label" parent="CanvasLayer2/Instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 380, 0 )
custom_fonts/font = SubResource( 1 )
text = "LEFT CLICK & DRAG: MOVE BLOCK

SPACE: ROTATE BLOCK

RIGHT CLICK & DRAG: CLEAR BLOCKS"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndButton" type="Button" parent="CanvasLayer2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -128.0
margin_right = -52.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 2 )
text = "END TUTORIAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrtShader" parent="CanvasLayer2" instance=ExtResource( 1 )]
visible = false

[node name="GridSystem" parent="." instance=ExtResource( 3 )]
position = Vector2( 448, 64 )

[node name="HeldStocks" type="Node2D" parent="."]

[node name="TutorialStocksToTake" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 64 )
pathToHeldStocks = NodePath("../HeldStocks")

[node name="SelectDraw" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 5 )
isTutorial = true

[connection signal="pressed" from="CanvasLayer2/EndButton" to="." method="_on_Button_pressed"]
